fix overflow X

--- a/css/parts/1920/capabilities.css
+++ b/css/parts/1920/capabilities.css
@@ -2,6 +2,10 @@
   position: relative;
 }
 
+.capabilities_app_picture {
+  width: inherit;
+}
+
 .capabilities_app_container {
   display: flex;
   flex-wrap: wrap;
